update terminal color

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "github-awesome",
-  "displayName": "github-awesome",
+  "name": "awesome-github-theme",
+  "displayName": "Github Awesome Theme",
   "description": "An awesome github theme",
   "version": "0.0.1",
   "engines": {
