--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "awesome-github-theme",
   "displayName": "Github Awesome Theme",
-  "description": "An awesome github theme",
+  "description": "Another github theme",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.86.0"
   },
+  "publisher": "Behrami",
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "url": "https://github.com/QendrimBehrami/awesome-github-theme",
+    "type": "git",
+    "directory": "awesome-github-theme"
+  },
   "contributes": {
     "themes": [
       {
